working on adding authentication, issue with ruby 2.6

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,12 @@
         </div>
       </div>
     </div>
+    <div class="notification is-info" style="position: absolute;">
+      <%= notice %>
+    </div>
+    <div class="notification is-warning" style="position: absolute;">
+      <%= alert %>
+    </div>
     <section class="section">
       <div class="columns">
         <div class="column is-half is-offset-one-quarter">
