fixed looks bad

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       </div>
     <% end %>
 
-    <div class="navbar is-fixed-top is-dark">
+    <div class="navbar is-dark">
       <div class="navbar-brand">
         <a href="/" class="navbar-item">Getting Started with Rails</a>
         <div class="navbar-burger burger" id="main-burger">
