show articles written by a user on that user's page, and associate an authored article with the current user.

--- a/app/views/application/_errors.html.erb
+++ b/app/views/application/_errors.html.erb
@@ -1,8 +1,8 @@
 <% if model && model.errors.any? %>
   <% model.errors.each do |msg| %>
-    <div class="notification is-danger flash-message">
+    <div class="notification is-danger flash-message" style="position: absolute">
       <%= msg %>
-      <div class="button delete"></div>
+      <div class="delete"></div>
     </div>
   <% end %>
 <% end %>
