--- a/app/views/application/_sign_in.html.erb
+++ b/app/views/application/_sign_in.html.erb
@@ -1,7 +1,7 @@
 
 <% if auth_present? && logged_in? %>
   <div class=level>
-    <div class="level-left navbar-item">Welcome, <%= current_user.name %></div>
+    <div class="level-left navbar-item">Welcome, <%= link_to current_user.name, current_user %></div>
     <div class="level-right navbar-item">
       <%= link_to  "Sign out", sign_out_path, class: "button is-danger" %>
     </div>
