--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,3 @@
-<div class="level">
-  <h1 class="title level-left">Tha demo blog!</h1>
-  <% if logged_in? %>
-    <%= link_to 'New Article', new_article_path, class: 'button is-primary level-right' %>
-  <% end %>
+<div class=section>
+  <%= render partial: 'articles_list', locals: { articles: @articles, title: "Demo Rails Blog" } %>
 </div>
-
-<% @articles.each do |article| %>
-  <a href="<%= article_path(article)%>">
-    <div class="card">
-      <div class="card-header">
-        <h1 class="card-header-title"><%=article.title%></h1>
-      </div>
-      <p class="card-content" style="color: hsl(0, 0%, 71%);">
-        <%= summarize article.text %>
-      </p>
-      <% if logged_in? %>
-        <ul class="card-footer">
-          <li class="card-footer-item"><%= link_to 'Edit', edit_article_path(article) %></li>
-          <li class="card-footer-item">
-            <%= link_to 'Destroy',
-                        article_path(article),
-                        method: :delete,
-                        data: { confirm: "For sure?" }%>
-          </li>
-        </ul>
-      <% end %>
-    </div>
-  </a>
-  <br/><br/>
-<% end %>
