--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <div class="section">
-  Welcome, <%= current_user.name %>!
+  <%= render partial: 'articles_list', locals: { articles: current_user.articles, title: "Welcome, #{current_user.name}!" } %>
 </div>
